[package]
name = "blinc_lottie"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Lottie animation player for Blinc sketches — implements blinc_canvas_kit's Player trait"
repository = "https://github.com/project-blinc/blinc_lottie"
readme = "README.md"
rust-version = "1.75"

# Standalone package — NOT a member of the Blinc workspace. Lives under
# `/packages/` which is gitignored and workspace-excluded from the main
# Blinc repo, so this crate has its own upstream, own Cargo.lock, and
# evolves independently of Blinc's release cadence.

[dependencies]
# Pinned git deps on the Blinc upstream — same pattern as
# blinc_gltf / blinc_skeleton / blinc_input. The `[patch]` block
# below redirects to local paths for in-Blinc-workspace
# development; downstream consumers resolve against the pinned
# rev. Bump in lockstep with Blinc's `main` once a feature this
# crate needs lands.
#
# Pin to the Blinc rev that carries all APIs this crate currently
# consumes (`DrawContext`, `Path`, `Transform` from blinc_core;
# `Sketch`/canvas helpers from blinc_canvas_kit). Update when new
# crate functionality requires API additions upstream.
blinc_canvas_kit = { git = "https://github.com/project-blinc/Blinc.git", rev = "24f9d030e2026194942eab9d028bcac3814ae81b" }
blinc_core = { git = "https://github.com/project-blinc/Blinc.git", rev = "24f9d030e2026194942eab9d028bcac3814ae81b" }

# JSON parsing for Lottie's `.json` / `.lottie` (zipped JSON) format.
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error plumbing.
thiserror = "2.0"

# Local-dev patch — matches Blinc's workspace root, so
# `cargo check` from inside this crate uses the colocated Blinc
# checkout at `../../` instead of fetching the pinned rev. Also
# flattens transitive git-rev deps (e.g. blinc_canvas_kit →
# blinc_input → old Blinc `blinc_layout`) onto the path-dep
# versions so trait impls (e.g. `DivInputExt: impl for
# blinc_layout::Div`) resolve against a single `Div` type.
#
# Drop this block when blinc_lottie moves to crates.io —
# published semver resolution will unify versions on its own.
[patch."https://github.com/project-blinc/Blinc.git"]
blinc_core = { path = "../../crates/blinc_core" }
blinc_canvas_kit = { path = "../../crates/blinc_canvas_kit" }
blinc_layout = { path = "../../crates/blinc_layout" }
blinc_platform = { path = "../../crates/blinc_platform" }

[patch."https://github.com/project-blinc/blinc_input.git"]
blinc_input = { path = "../blinc_input" }
