[package]
name = "blinc_lottie"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Lottie animation player for Blinc sketches — implements blinc_canvas_kit's Player trait"
repository = "https://github.com/project-blinc/blinc_lottie"
readme = "README.md"
rust-version = "1.75"

# Standalone package — NOT a member of the Blinc workspace. Lives under
# `/packages/` which is gitignored and workspace-excluded from the main
# Blinc repo, so this crate has its own upstream, own Cargo.lock, and
# evolves independently of Blinc's release cadence.

[dependencies]
# Pinned git deps on the Blinc upstream — same pattern as
# blinc_gltf / blinc_skeleton / blinc_input. The `[patch]` block
# below redirects to local paths for in-Blinc-workspace
# development; downstream consumers resolve against the pinned
# rev. Bump in lockstep with Blinc's `main` once a feature this
# crate needs lands.
#
# Pin to the Blinc rev that carries all APIs this crate currently
# consumes (`DrawContext`, `Path`, `Transform` from blinc_core;
# `Sketch`/canvas helpers from blinc_canvas_kit). Update when new
# crate functionality requires API additions upstream.
blinc_canvas_kit = { git = "https://github.com/project-blinc/Blinc.git", rev = "24f9d030e2026194942eab9d028bcac3814ae81b" }
blinc_core = { git = "https://github.com/project-blinc/Blinc.git", rev = "24f9d030e2026194942eab9d028bcac3814ae81b" }
# Image decoding for `ty: 2` image layers — handles base64 data
# URIs embedded in `assets[].p` as well as raw PNG / JPEG bytes
# extracted from the `.lottie` archive's `i/` directory. Optional
# so assets that never use raster layers don't pay for the deps.
blinc_image = { git = "https://github.com/project-blinc/Blinc.git", rev = "24f9d030e2026194942eab9d028bcac3814ae81b", optional = true }
# Font registry access — `.lottie` archives can bundle font faces
# under `f/`, and the text layer's `family` field matches them by
# name. We register bundled TTF / OTF bytes with the global registry
# at parse time so `from_dotlottie_bytes` surfaces the intended font
# without requiring the host to plumb it in manually.
blinc_text = { git = "https://github.com/project-blinc/Blinc.git", rev = "24f9d030e2026194942eab9d028bcac3814ae81b" }

# JSON parsing for Lottie's `.json` / `.lottie` (zipped JSON) format.
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error plumbing.
thiserror = "2.0"

# dotLottie archive support. `.lottie` is a zip containing
# `animation.json` + `state_machine.json` + image assets. Feature-
# gated so callers who only ever load raw JSON Lotties don't pay
# for the `zip` crate's transitive deps (deflate, crc32fast, etc.).
# `deflate` is the only algorithm .lottie archives use; turning
# off the rest (bzip2, deflate64, lzma, zstd) shrinks the dep
# tree substantially.
zip = { version = "2.2", default-features = false, features = ["deflate"], optional = true }

# Local-dev patch — matches Blinc's workspace root, so
# `cargo check` from inside this crate uses the colocated Blinc
# checkout at `../../` instead of fetching the pinned rev. Also
# flattens transitive git-rev deps (e.g. blinc_canvas_kit →
# blinc_input → old Blinc `blinc_layout`) onto the path-dep
# versions so trait impls (e.g. `DivInputExt: impl for
# blinc_layout::Div`) resolve against a single `Div` type.
#
# Drop this block when blinc_lottie moves to crates.io —
# published semver resolution will unify versions on its own.
[patch."https://github.com/project-blinc/Blinc.git"]
blinc_core = { path = "../../crates/blinc_core" }
blinc_canvas_kit = { path = "../../crates/blinc_canvas_kit" }
blinc_image = { path = "../../crates/blinc_image" }
blinc_layout = { path = "../../crates/blinc_layout" }
blinc_platform = { path = "../../crates/blinc_platform" }
blinc_text = { path = "../../crates/blinc_text" }

[patch."https://github.com/project-blinc/blinc_input.git"]
blinc_input = { path = "../blinc_input" }

[features]
# `.lottie` archive parsing + state-machine wrapper. Default on
# because the archive format is what the dotLottie community has
# standardised around for distribution, and most real-world Lottie
# assets ship as `.lottie` now. Callers bundling only raw JSON
# scenes can opt out via `default-features = false`.
default = ["dotlottie", "images"]
dotlottie = ["dep:zip"]
# `ty: 2` image layer support. Pulls in `blinc_image` for PNG /
# JPEG / base64 decoding. Callers that only load vector-only
# Lotties can disable this to shed the image-decoding deps.
images = ["dep:blinc_image"]

# Dev-only deps for the runnable examples under `examples/`.
# `blinc_core` / `blinc_canvas_kit` / `blinc_image` come in through
# `[dependencies]` + the `[patch]` block; only the extras examples
# actually need go here. `blinc_app` is the windowing host
# (examples open a real window) and `blinc_layout` carries the
# `div()` / `ElementBuilder` surface the examples build UI with.
# Published distributions should exclude `examples/` (cargo refuses
# to package path dev-deps otherwise).
[dev-dependencies]
blinc_app = { path = "../../crates/blinc_app" }
blinc_layout = { path = "../../crates/blinc_layout" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }

[[example]]
name = "sandy_loading"
path = "examples/sandy_loading.rs"

[[example]]
name = "sandy_loading_dotlottie"
path = "examples/sandy_loading_dotlottie.rs"

[[example]]
name = "lottie_gallery"
path = "examples/lottie_gallery.rs"
